--- a/SmartInventoryManager/templates/login.html
+++ b/SmartInventoryManager/templates/login.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h2>Login</h2>
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
@@ -14,5 +9,4 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
-</body>
-</html>
+{% endblock %}
